--- a/index.html
+++ b/index.html
@@ -342,6 +342,29 @@
 			margin: 15px 0 0 0;
 			border-right: 1px solid #CBCBCB;
 		}
+
+		.site-map {
+			height: 80px;
+			width: 95px;
+			padding: 20px 20px 20px 20px;
+			font-family: Arial;
+			font-size: 0.7em;
+			color: white;
+			float: left;
+			text-align: left;
+			margin: 15px 0 0 0;
+		}
+
+		.site-map li {
+			list-style: none;
+			padding-bottom: 5px;
+		}
+
+		h5 {
+			margin: 0;
+			font-family: Arial;
+			font-size: 1.25em;
+		}
 		
 		p {
 			text-indent: 25px;
@@ -490,6 +513,20 @@
 	</div>
 	<div id="footer" class="shadow">
 		<div id="address">Contra Costa Association of Realtors®<br>1870 Olympic Blvd., Suite 200, Walnut Creek, CA 94596<br><br>Phone: (925) 295-1270<br>Fax: (925) 938-1294</div>
+		<div class="site-map">
+			<h5>Scholarship</h5>
+			<ul>
+				<li>Eligibility</li>
+				<li>Application</li>
+			</ul>
+		</div>
+		<div class="site-map">
+			<h5>Foundation</h5>
+			<ul>
+				<li>Contribution</li>
+				<li>Trustees</li>
+			</ul>
+		</div>
 		<div id="rights"><i>© 2016 CCAR Scholarship Foundation</i></div>
 	</div>
 </body>
