edits before reboot

--- a/foundation.bootstrap.html
+++ b/foundation.bootstrap.html
@@ -26,16 +26,12 @@
 
 	<style>
 
-        .apply-text {
-            padding-top: 8px;
-        }
-
         .eligibility-application {
             background-color: #0D2134;
             color: white;
             font-family: 'Lato', sans-serif;
-            font-size: 1.75em;
-            padding: 25px 0 25px 0;
+            font-size: 2em;
+            padding: 25px 0 35px 0;
         }
 
         .eligibility-text {
@@ -52,26 +48,9 @@
             /*text-align: center;*/
         }
 
-        .link {
-            background-color: #FFD84B;
-            font-family: 'Lato', sans-serif;
-            font-size: 1em;
-            padding-bottom: 10px;
-            transition: all 0.3s ease 0s;
-        }
-
-        a.link {
-            color: black;
-        }
-
-        .link:hover {
-            background-color: #3071A9;
-            color: white;
-        }
-
-        .title {
-            font-size: 1.25em;
-            font-weight: bold;
+        .school-list {
+            padding-top: 15px;
+            list-style: initial;
         }
 
 	</style>
@@ -121,7 +100,7 @@
         	<div class="col-md-12 eligibility-title">
 	        	<div class="col-md-3"></div>
 	            <div class="col-md-6">
-	            	<h1 class="motto tlt">Scholarship Eligibility</h1>
+	            	<h1 class="motto tlt">Foundation</h1>
 	            </div>
 	            <div class="col-md-3"></div>
 	        </div>
@@ -129,55 +108,73 @@
         <div class="row eligibility-text">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <p>Scholarship candidates may be either undergraduates or graduate students. All
-                applicants must strictly comply with the application process and fully meet all of
-                the following requirements.</p>
-                <h4 class="title line">Without exception, candidates must:</h4>
-                <ol>
-                    <li>Have already completed <strong>ONE YEAR</strong> of full-time college study; i.e., cannot be
-                    an incoming freshman</li>
-                    <li>Be currently enrolled full-time in college</li>
-                    <li>Have completed courses of study that reflect an emphasis on real estate, finance
-                    and/or business</li>
-                    <li>Have a GPA (grade point average) of 3.0 or higher</li>
-                    <li>Be a resident of Contra Costa County</li>
-                </ol>
-                <h4 class="title line">Submit an application to include:</h4>
-                <ul>
-                    <li>Your most recent transcript</li>
-                    <li>Letter of recommendation on school stationery from one of your instructors</li>
-                    <li>A 300 word essay stating your reasons for pursuing a career in real estate, finance
-                    and/or business</li>
-                </ul>
+                <p>The Contra Costa Association of Realtors® (CCAR) Scholarship Foundation provides college scholarship grants to qualifying students in the fields of finance, business and real estate. Our commitment to support higher education is the heart of the Contra Costa Association of Realtors®' desire to make a difference! In the last five years alone, the Foundation has awarded nearly $250,000 in college grants to deserving students whose families reside in central Contra Costa County. The CCAR Scholarship Foundation was formed in 1967 and is a non-profit 501(c)(3) organization. It is administered by a governing board of fourteen Trustees; officers include a president, vice-president, treasurer and secretary.</p>
+                <p>The Foundation receives its financial support directly from Realtors®, industry Affiliate members and friends of the Contra Costa Association of Realtors®.
+                If you are a scholarship candidate, a parent of a prospective student or a counselor from an accredited college or university, we welcome you to our Foundation.
+                If you are a Realtor®, industry Affiliate or future contributor to our organization, we invite you to be a 'partner in our success', to be a member of the CCAR Scholarship Foundation family and to share in the incredibly gratifying experience of enabling higher education.</p>
             </div>
             <div class="col-md-3"></div>
         </div>
         <div class="row eligibility-application">
             <div class="col-md-3"></div>
             <div class="col-md-6 apply-text">
-                If you're ready to apply&nbsp&nbsp&nbsp&nbsp
-                <a class="btn btn-secondary link" href="#" role="button">Apply now&nbsp&nbsp&nbsp<span class="glyphicon glyphicon-menu-right glyph" aria-hidden="true" style="vertical-align:middle"></span></a>
+                <h3>Our Scholarship Recipients Have Come From:</h3>
             </div>
             <div class="col-md-3"></div>
         </div>
         <div class="row eligibility-text">
             <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <h4 class="title">Scholarship Amount and Expectations:</h4>
-                <p class="line">Upon completing and submitting the written application requirements no later than April 30th, 2016,
-                each scholarship candidate is required to attend a personal interview in Walnut Creek, California
-                with the Foundation trustees. The interview will approximately take one hour and is an important
-                part of the selection criteria. Advance notice will be given. Interviews are tentatively scheduled
-                for the morning of June 10th, 2016.</p>
-                <p>Upon notification of a scholarship award, each scholarship winner is expected to attend the annual CCAR
-                scholarship awards luncheon. It is scheduled for July 8th, 2016 at the (LOCATION). The scholarship winner and both
-                parents are guests of the Foundation at this event. The student is expected to briefly address the audience
-                at the luncheon.</p>
-                <p>Scholarship awards range from $1500-$2500 for each qualifying student. The funds are wired directly from
-                the CCAR Scholarship Foundation account to the student's school account in time for the Fall semester.
-                Student candidates can apply and be awarded scholarships up to two times.</p>
+            <div class="col-md-2">
+                <ul class="school-list">
+                    <li>Georgetown University</li>
+                    <li>UC Berkeley</li>
+                    <li>St. Mary's College</li>
+                    <li>USC</li>
+                    <li>Claremont McKenna College</li>
+                    <li>Diablo Valley College</li>
+                    <li>Sonoma State University</li>
+                    <li>San Diego State University</li>
+                    <li>Kingston University (London)</li>
+                    <li>University of Oregon</li>
+                    <li>Humboldt State University</li>
+                    <li>UCSB</li>
+                    <li>John F. Kennedy University</li>
+                </ul>
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-2">
+                <ul class="school-list">
+                    <li>University of Maryland</li>
+                    <li>UCLA</li>
+                    <li>University of California – Davis</li>
+                    <li>University of Denver</li>
+                    <li>Whittier College</li>
+                    <li>California State – East Bay</li>
+                    <li>Loyola Marymount University</li>
+                    <li>Hawaii Pacific University</li>
+                    <li>Boston College</li>
+                    <li>California Polytechnic State University</li>
+                    <li>University of Washington</li>
+                    <li>Wake Forest University</li>
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <ul class="school-list">
+                    <li>San Jose State University</li>
+                    <li>Southern Methodist University</li>
+                    <li>Seattle Pacific University</li>
+                    <li>Harvard College</li>
+                    <li>University of the Pacific</li>
+                    <li>California State - Sacramento</li>
+                    <li>University of Arizona</li>
+                    <li>Chapman University</li>
+                    <li>Arizona State University</li>
+                    <li>California State – Chico</li>
+                    <li>University of Pennsylvania</li>
+                    <li>New York University</li>
+                    <li>University of Minnesota</li>
+                </ul>
+            </div>
+            <div class="col-md-3"></div>
         </div>
         <div class="row footer">
             <div class="col-md-3"></div>
